force-app/main/default/objects/Device_Queue_Binding__mdt/Device_Queue_Binding__mdt.object-meta.xml
<CustomObject>
    <label>Device Queue Binding</label>
    <pluralLabel>Device Queue Bindings</pluralLabel>
</CustomObject>