force-app/main/default/objects/Device_Queue_Binding__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <label>Active</label>
    <description>Uncheck to stop driving this device without deleting the binding.</description>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>