force-app/main/default/objects/Device_Queue_Binding__mdt/fields/Device_Id__c.field-meta.xml
<CustomField>
    <fullName>Device_Id__c</fullName>
    <label>Device ID</label>
    <description>AWS IoT Thing name of the physical indicator bound to this queue.</description>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>