force-app/main/default/objects/Device_Queue_Binding__mdt/fields/Full_Speed_Depth__c.field-meta.xml
<CustomField>
    <fullName>Full_Speed_Depth__c</fullName>
    <label>Full Speed Depth</label>
    <description>Open case count at which the indicator runs at maximum speed. Depth is scaled 0..this value before being sent to the device.</description>
    <precision>3</precision>
    <scale>0</scale>
    <required>true</required>
    <type>Number</type>
</CustomField>