force-app/main/default/objects/Device_Queue_Binding__mdt/fields/Queue_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Queue_Developer_Name__c</fullName>
    <label>Queue Developer Name</label>
    <description>DeveloperName of the Group record (Type = Queue) this device watches.</description>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>